--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,28 @@
 
     <groupId>ru.ezhov</groupId>
     <artifactId>dictionary</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <modules>
-        <module>dictionary-server</module>
         <module>dictionary-informer</module>
     </modules>
     <packaging>pom</packaging>
 
     <name>dictionary</name>
-    <url>http://maven.apache.org</url>
+    <url>https://github.com/ezhov-da/dictionary</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
